--- a/es/adc~_dac~-help.pd.html
+++ b/es/adc~_dac~-help.pd.html
@@ -11,21 +11,21 @@
 
 <body>
 
-<h2>[adc~] [dac~] audio I/O </h2>
+<h2>[adc~] [dac~] audio Entrada/Salida </h2>
 
-<p>adc~ and dac~ provide real-time audio input and output for Pd, respectively, whether analog or digital. By default they are stereo (with channel numbers 1, 2) but you can specify different channel numbers as in:</p>
+
+<p>adc~ y dac~ proveen, respectivamente, entradas y salidas de audio en tiempo-real ya sea análogo o digital. Predeterminadamente son estéreo (usando los canales 1 y 2) pero puede especificar diferentes canales. Por eg:</p>
+
 
 <pre>
 
-[adc~ 5]  (input from channel 5 only)
+[adc~ 5]  (entrada del canal 5 unicamente)
 
-[dac~ 1 2 5 23]  (output to channels 1, 2, 5, and 23)
+[dac~ 1 2 5 23]  (salidas de canales 1, 2, 5 y 23)
 
 </pre>
 
-
-
-<p>The actual number of channels Pd inputs and outputs is set on Pd's command line or in the "audio settings" dialog. You can open patches that want to use more channels, and channel numbers out of range will be dropped (dac~) or appear as zero (adc~).</p>
+<p>La cantidad de canales de entrada y salida puede ser especificada desde la linea de comando de Pd o en el dialogo "Configuración de Audio". Puede que use patches que necesitan mas canales, en ese caso, los canales de salida (dac~) serán descartados y para los canales (adc~) habrá solo ceros en la salida.</p>
 
 <pre>
 
@@ -35,9 +35,11 @@
 
 </pre>
 
-<p>The "set" message to either dac~ or adc~ resets the channel or channels. This requires Pd to restart DSP and so should only be done at setup time, not while audio is being computed.</p>
+<p>El mensaje "set" para dac~ como para adc~ resetea el o los canales. Esto requiere que Pd re-inicialize el DSP y por esto no debe ser efectuado mientras el audio esta corriendo sino con anterioridad (cuando este preparando el sistema).</p>
 
-<p>If more than one dac~ outputs to the same channel, the signals are added. More than one adc~ may read the same input channel.</p>
+<p>Si mas de un dac~ sale al mismo canal las señales se suman. Mas de un adc~ leen el mismo canal de entrada.</p>
+
+
 
 
 </body>
