--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h2>Pd reference </h2>
 
 <p><a href="./en/index.html">English</a></p>
-<p><a href="">Español</a></p>
+<p><a href="./es/index.html">Español</a></p>
 
 
 
