--- a/pd-manual-preview-1/x1.htm
+++ b/pd-manual-preview-1/x1.htm
@@ -83,13 +83,11 @@ This HTML manual has five sections:
 For a list of all the objects you can use menu <b>Help/List of objects</b>.  To get help on any
 Pd object you can right click on it; or you can browse the help patches
 by choosing menu <b>Help/Browser</b> and looking in
-"5.reference".
+"Pure Data/5.reference".
 
 <P>
 The example patches are also available from menu <b>Help/Browser</b>.  
-They appear in subdirectories named
-"2.control.examples" and "3.audio.examples". Some additional
-patches in "7.stuff" might also be helpful.
+Some additional patches in "7.stuff" might also be helpful.
 
 <P>
 To get started writing your own C extensions, refer to <A href=x4.htm>chapter 4 </A>of this manual.
