--- a/pd-manual-preview-1/index.htm
+++ b/pd-manual-preview-1/index.htm
@@ -13,6 +13,13 @@
 
 <BODY>
 
+
+<div class="butt">
+<button class="btn-toggle">&#9788;</button> 
+</div>
+
+<div id=corpus>
+
 <H1>Pd Documentation</H1>
 
 <P>
@@ -222,9 +229,9 @@ can be found at:
 
 
 -->
+</div>
 
-
-
+<script src="pdmanual.js"></script>
 </BODY>
 </HTML>
 
