--- a/pd-manual-preview-1/x1.htm
+++ b/pd-manual-preview-1/x1.htm
@@ -12,6 +12,13 @@
 
 <BODY>
 
+
+<div class="butt">
+<button class="btn-toggle">&#9788;</button> <button class="btn-toc" onclick="window.location.href='index.htm';">toc</button>
+</div>
+
+<div id=corpus>
+
 <H2>Pd Documentation chapter 1: introduction</H2>
 
 <P>
@@ -129,5 +136,8 @@ or package manager of your Linux distribution.
 <P> Here are some
 <a href="http://msp.ucsd.edu/external-links.htm">
 more external links</A>.
+</div>
+
+<script src="pdmanual.js"></script>
 </BODY>
 </HTML>
