--- a/pd-manual-preview-1/x2.htm
+++ b/pd-manual-preview-1/x2.htm
@@ -13,6 +13,13 @@
 
 <BODY>
 
+
+<div class="butt">
+<button class="btn-toggle">&#9788;</button> <button class="btn-toc" onclick="window.location.href='index.htm';">toc</button>
+</div>
+
+<div id=corpus>
+
 <H2>Pd Documentation chapter 2: theory of operation</H2>
 
 <P>
@@ -1276,6 +1283,9 @@ recently been implemented in its current form, and as (hopefully) the user base
 grows there will surely be occasions for many further extensions of the data
 handling primitives and the graphical presentation and editing functions.
 
+</div>
+
+<script src="pdmanual.js"></script>
 </BODY>
 </HTML>
  
