--- a/pd-manual-preview-1/x3.htm
+++ b/pd-manual-preview-1/x3.htm
@@ -13,6 +13,13 @@
 
 <BODY>
 
+
+<div class="butt">
+<button class="btn-toggle">&#9788;</button> <button class="btn-toc" onclick="window.location.href='index.htm';">toc</button>
+</div>
+
+<div id=corpus>
+
 <H2>Pd Documentation chapter 3: Getting Pd to run</H2>
 
 <P>
@@ -709,6 +716,9 @@ to the directory containing the patch. You may also invoke externs that way. ( S
 the "openpanel" and "savepanel" objects can handle spaces.  Spaces in the
 path should work as of version 0.38.
 
+</div>
+
+<script src="pdmanual.js"></script>
 </BODY>
 </HTML>
 
