--- a/pd-manual-preview-1/x4.htm
+++ b/pd-manual-preview-1/x4.htm
@@ -13,6 +13,13 @@
 
 <BODY>
 
+
+<div class="butt">
+<button class="btn-toggle">&#9788;</button> <button class="btn-toc" onclick="window.location.href='index.htm';">toc</button>
+</div>
+
+<div id=corpus>
+
 <H2>Pd Documentation chapter 4: externals</H2>
 
 <P>
@@ -449,5 +456,8 @@ for abstractions, which get updated any time they’re replaced and reloaded.
 <br>
 <br>
 
+</div>
+
+<script src="pdmanual.js"></script>
 </BODY>
 </HTML>
