--- a/pd-manual-preview-1/x5.htm
+++ b/pd-manual-preview-1/x5.htm
@@ -12,6 +12,13 @@
   
 <BODY>
 
+
+<div class="butt">
+<button class="btn-toggle">&#9788;</button> <button class="btn-toc" onclick="window.location.href='index.htm';">toc</button>
+</div>
+
+<div id=corpus>
+
 <H2>Pd Documentation chapter 5. current status</H2>
 
 <P>
@@ -2267,5 +2274,8 @@ make a patch that copies a "table" into a "buffer~".
 <P> The "bpatcher" feature in Max has a correlate, "graph on parent" subpatches,
 in Pd; however, Pd's version is quite different from Max's.
 
+</div>
+
+<script src="pdmanual.js"></script>
 </BODY>
 </HTML>
