--- a/pd-manual-preview-1/x6-a.htm
+++ b/pd-manual-preview-1/x6-a.htm
@@ -13,6 +13,13 @@
 <BODY>
 
 
+<div class="butt">
+<button class="btn-toggle">&#9788;</button> <button class="btn-toc" onclick="window.location.href='index.htm';">toc</button>
+</div>
+
+<div id=corpus>
+
+
 <p><a class=green href="x6.htm#more-mac" >back to ch6</a> <a href="index.htm#s6"> back to table of contents </a></p>
 
 
@@ -236,5 +243,8 @@ time.</p>
 </br>
 </br>
 
+</div>
+
+<script src="pdmanual.js"></script>
 </BODY>
 </HTML>
