--- a/pd-manual-preview-1/x6-b.htm
+++ b/pd-manual-preview-1/x6-b.htm
@@ -12,6 +12,13 @@
   
 <BODY>
 
+
+<div class="butt">
+<button class="btn-toggle">&#9788;</button> <button class="btn-toc" onclick="window.location.href='index.htm';">toc</button>
+</div>
+
+<div id=corpus>
+
 <p><a class=green href="x6.htm#more-windows" >back to ch6</a> <a href="index.htm#s6"> back to table of contents </a></p>
 
 <h3 id="s6.5.1">6.5.1 Windows resources</h3>
@@ -192,5 +199,8 @@ redistribute their source files.</p>
 </br>
 </br>
 
+</div>
+
+<script src="pdmanual.js"></script>
 </BODY>
 </HTML>
