--- a/pd-manual-preview-1/x6.htm
+++ b/pd-manual-preview-1/x6.htm
@@ -13,6 +13,13 @@
 <BODY>
 
 
+<div class="butt">
+<button class="btn-toggle">&#9788;</button> <button class="btn-toc" onclick="window.location.href='index.htm';">toc</button>
+</div>
+
+<div id=corpus>
+
+
 
 <H2>Pd Documentation chapter 6. Installing from source.</H2>
 
@@ -442,5 +449,8 @@ cd ../fiddle~ &amp;&amp; make pd_nt
 </br>
 </br>
 
+</div>
+
+<script src="pdmanual.js"></script>
 </BODY>
 </HTML>
