--- a/pd-manual-preview-1/x6-a.htm
+++ b/pd-manual-preview-1/x6-a.htm
@@ -14,7 +14,7 @@
 
 
 <div class="butt">
-<button class="btn-toggle">&#9788;</button> <button class="btn-toc" onclick="window.location.href='index.htm';">toc</button>
+<button class="btn-toggle">&#9680;</button>
 </div>
 
 <div id=corpus>
