update images and more

--- a/pd-manual-preview-1/x1.htm
+++ b/pd-manual-preview-1/x1.htm
@@ -14,7 +14,7 @@
 
 
 <div class="butt">
-<button class="btn-toggle">&#9680;</button>
+<button class="btn-toggle">&#9680;</button><button class="btn-toggle-font">f</button>
 </div>
 
 <div id=corpus>
@@ -133,9 +133,12 @@ Guenter Geiger, and now maintained by IOhannes zm&ouml;lnig. You can get
 it from: <A href="http://gem.iem.at/">http://gem.iem.at/</A>, via "Find externals"
 or package manager of your Linux distribution.
 
-<P> Here are some
-<a href="http://msp.ucsd.edu/external-links.htm">
-more external links</A>.
+<P>
+<BR><BR>
+<A href="x2.htm"> next chapter </A><BR>
+<A href="index.htm#s1"> back to table of contents </A> 
+<BR><BR>
+</P>
 </div>
 
 <script src="pdmanual.js"></script>
