--- a/pd-manual-preview-1/x4.htm
+++ b/pd-manual-preview-1/x4.htm
@@ -15,7 +15,7 @@
 
 
 <div class="butt">
-<button class="btn-toggle">&#9680;</button>
+<button class="btn-toggle">&#9680;</button><button class="btn-toggle-font">f</button>
 </div>
 
 <div id=corpus>
@@ -453,8 +453,13 @@ recreate it. Hence, if you're working on a new object and decide to change it,
 you have to exit and re-enter Pd to get the change to take. This is not needed
 for abstractions, which get updated any time they’re replaced and reloaded.
 
-<br>
-<br>
+
+<P>
+<BR><BR>
+<A href="x5.htm"> next chapter </A><BR>
+<A href="index.htm#s4"> back to table of contents </A> 
+<BR><BR>
+</P>
 
 </div>
 
