--- a/pd-manual-preview-1/x5.htm
+++ b/pd-manual-preview-1/x5.htm
@@ -14,7 +14,7 @@
 
 
 <div class="butt">
-<button class="btn-toggle">&#9680;</button>
+<button class="btn-toggle">&#9680;</button><button class="btn-toggle-font">f</button>
 </div>
 
 <div id=corpus>
@@ -2274,6 +2274,12 @@ make a patch that copies a "table" into a "buffer~".
 <P> The "bpatcher" feature in Max has a correlate, "graph on parent" subpatches,
 in Pd; however, Pd's version is quite different from Max's.
 
+<P>
+<BR><BR>
+<A href="x6.htm"> next chapter </A><BR>
+<A href="index.htm#s5"> back to table of contents </A> 
+<BR><BR>
+</P>
 </div>
 
 <script src="pdmanual.js"></script>
