--- a/pd-manual-preview-1/x6.htm
+++ b/pd-manual-preview-1/x6.htm
@@ -14,7 +14,7 @@
 
 
 <div class="butt">
-<button class="btn-toggle">&#9680;</button>
+<button class="btn-toggle">&#9680;</button><button class="btn-toggle-font">f</button>
 </div>
 
 <div id=corpus>
@@ -445,9 +445,12 @@ cd ../fiddle~ &amp;&amp; make pd_nt
 <li>steps you took: configuration options, etc</li>
 </ul>
 
-</br>
-</br>
-</br>
+
+<P>
+<BR><BR>
+<A href="index.htm#s6"> back to table of contents </A> 
+<BR><BR>
+</P>
 
 </div>
 
