--- a/pd-manual-preview-1/index.htm
+++ b/pd-manual-preview-1/index.htm
@@ -15,7 +15,7 @@
 
 
 <div class="butt">
-<button class="btn-toggle">&#9680;</button> 
+<button class="btn-toggle">&#9680;</button><button class="btn-toggle-font">f</button>
 </div>
 
 <div id=corpus>
@@ -27,7 +27,7 @@ This is the HTML documentation for Pd, a patchable environment for audio
 analysis, synthesis, and processing,
 with a rich set of multimedia capabilities.  The latest version of this page
 can be found at:
-    <a href="http://msp.ucsd.edu/software.html" id=s1>
+    <a href="http://msp.ucsd.edu/software.html">
     http://msp.ucsd.edu/software.html</A> .
 <OL>
 <LI> <a href="x1.htm" id=s1>introduction </A>
