--- a/pd-manual-preview-1/x2.htm
+++ b/pd-manual-preview-1/x2.htm
@@ -15,7 +15,7 @@
 
 
 <div class="butt">
-<button class="btn-toggle">&#9680;</button>
+<button class="btn-toggle">&#9680;</button><button class="btn-toggle-font">f</button>
 </div>
 
 <div id=corpus>
@@ -31,7 +31,7 @@
 
 <P> The purpose of this chapter is to describe Pd's design and how it is
 supposed to work.  Practical details about how to obtain, install, and run Pd 
-are described in the <A href=x3.htm>next chapter</A>.  Links to more extensive guidaes (and to
+are described in the <A href=x3.htm>next chapter</A>.  Links to more extensive guides (and to
 more theoretical information about computer music) can be found in the
 <A href=x1.htm>previous chapter</A>.
 
@@ -1283,6 +1283,13 @@ recently been implemented in its current form, and as (hopefully) the user base
 grows there will surely be occasions for many further extensions of the data
 handling primitives and the graphical presentation and editing functions.
 
+
+<P>
+<BR><BR>
+<A href="x3.htm"> next chapter </A><BR>
+<A href="index.htm#s2"> back to table of contents </A> 
+<BR><BR>
+</P>
 </div>
 
 <script src="pdmanual.js"></script>
