--- a/pd-manual-preview-1/x3.htm
+++ b/pd-manual-preview-1/x3.htm
@@ -15,7 +15,7 @@
 
 
 <div class="butt">
-<button class="btn-toggle">&#9680;</button>
+<button class="btn-toggle">&#9680;</button><button class="btn-toggle-font">f</button>
 </div>
 
 <div id=corpus>
@@ -715,6 +715,13 @@ to the directory containing the patch. You may also invoke externs that way. ( S
 <P> As of version 0.35, there may be spaces in the path to Pd itself; also,
 the "openpanel" and "savepanel" objects can handle spaces.  Spaces in the
 path should work as of version 0.38.
+
+<P>
+<BR><BR>
+<A href="x4.htm"> next chapter </A><BR>
+<A href="index.htm#s3"> back to table of contents </A> 
+<BR><BR>
+</P>
 
 </div>
 
