integers 32-bit floating point

--- a/pd-manual-preview-1/x2.htm
+++ b/pd-manual-preview-1/x2.htm
@@ -342,8 +342,8 @@ Pd messages are sporadic, like MIDI messages or music N "Note cards."
 any number of arguments.  The selector is a symbol, which appears in the patch
 as a non-numeric string with no white space, semicolons, or commas.  The
 arguments may be symbols or numbers.  Numbers in Pd are kept in 32-bit floating
-point, so that they can represent integers exactly between -8388608 and
-8388608.  (In Max, there are separate data types for integers and floating
+point, so that they can represent integers exactly between −16777216 and
+16777216.  (In Max, there are separate data types for integers and floating
 point numbers; Pd uses only float.)
 
 <P> When a message is passed to something (which is often an inlet of a box 
