--- a/pd-manual-preview-1/x1.htm
+++ b/pd-manual-preview-1/x1.htm
@@ -93,7 +93,7 @@ by choosing menu <b>Help/Browser</b> and looking in
 "Pure Data/5.reference".
 
 <P>
-The example patches are also available from menu <b>Help/Browser</b>.  
+The "example" patches are also available from Pd's browser</b>.  
 Some additional patches in "7.stuff" might also be helpful.
 
 <P>
