--- a/pd-manual-preview-1/x6-a.htm
+++ b/pd-manual-preview-1/x6-a.htm
@@ -14,7 +14,7 @@
 
 
 <div class="butt">
-<button class="btn-toggle">&#9680;</button><button class="btn-toggle-font">f</button>
+<button class="btn-toggle-theme">&#9680;</button><button class="btn-toggle-font">f</button>
 </div>
 
 <div id=corpus>
