--- a/pd-manual-preview-1/x4.htm
+++ b/pd-manual-preview-1/x4.htm
@@ -102,25 +102,19 @@ instance:
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center;"><strong>i386</strong></td>
+<td style="text-align:center;"><strong>generic</strong></td>
 <td style="text-align:center;">.pd_linux</td>
 <td style="text-align:center;">.pd_darwin</td>
 <td style="text-align:center;">.dll</td>
 </tr>
 <tr>
-<td style="text-align:center;">  </td>
+<td style="text-align:center;"><strong>i386</strong></td>
 <td style="text-align:center;">.l_i386</td>
 <td style="text-align:center;">.d_i386  </td>
 <td style="text-align:center;">.m_i386  </td>
 </tr>
 <tr>
-<td style="text-align:center;"><strong>amd64</strong></td>
-<td style="text-align:center;">.pd_linux</td>
-<td style="text-align:center;">.pd_darwin</td>
-<td style="text-align:center;">.dll</td>
-</tr>
-<tr>
-<td style="text-align:center;">  </td>
+<td style="text-align:center;"> <strong>amd64</strong> </td>
 <td style="text-align:center;">.l_amd64</td>
 <td style="text-align:center;">.d_amd64  </td>
 <td style="text-align:center;">.m_amd64  </td>
@@ -145,6 +139,7 @@ instance:
 </tr>
 </tbody>
 </table>
+
 	
 	
 	
