--- a/pd-manual-preview-1/x4.htm
+++ b/pd-manual-preview-1/x4.htm
@@ -103,8 +103,8 @@ instance:
 <tbody>
 <tr>
 <td style="text-align:center;"><strong>generic</strong></td>
-<td style="text-align:center;">.pd_linux</td>
-<td style="text-align:center;">.pd_darwin</td>
+<td style="text-align:center;">.pd_linux<br>.so</td>
+<td style="text-align:center;">.pd_darwin<br>.dylib</td>
 <td style="text-align:center;">.dll</td>
 </tr>
 <tr>
