--- a/pd-manual-preview-1/x4.htm
+++ b/pd-manual-preview-1/x4.htm
@@ -325,8 +325,7 @@ system will be shown to you. See figure below.
 
 <p>When you click on the version you want, Pd asks if you want to the
 external folder set in “Path => Prferences”, which should be
-10
-~/Documents/Pd/external by default. If you say yes, there is where it gets
+"~/Documents/Pd/externals" by default. If you say yes, there is where it gets
 downloaded to, but if you say no, you can specify somewhere else.
 <br>
 <br>
@@ -496,7 +495,6 @@ an object built into Pd (an internal).
 Pd, it's there for the duration of your Pd session. This means that if you
 replace the binary for a new one, the object won't be updated even if you
 recreate it. Hence, if you're working on a new object and decide to change it,
-16
 you have to exit and re-enter Pd to get the change to take. This is not needed
 for abstractions, which get updated any time they’re replaced and reloaded.
 
