--- a/pd-manual-preview-1/x6.htm
+++ b/pd-manual-preview-1/x6.htm
@@ -64,11 +64,11 @@ distribution comes with two build systems:</P>
 
 <p>Building Pd using the GNU autotools involves the following steps for all platforms:</p>
 
-<ol style="list-style-type: decimal">
-<li>configure: detect &amp; set library and platform options</li>
-<li>make: compile Pd, associated tools, and resource files (ie. translations)</li>
-<li>install: install the Pd binaries and resources onto your system</li>
-</ol>
+<ul>
+<li>1. configure: detect &amp; set library and platform options</li>
+<li>2. make: compile Pd, associated tools, and resource files (ie. translations)</li>
+<li>3. install: install the Pd binaries and resources onto your system</li>
+</ul>
 
 <p>Overview:</p>
 
