--- a/pandoc-and-reference/bang.html
+++ b/pandoc-and-reference/bang.html
@@ -12,7 +12,7 @@
 
 </div>
 <div id=corpus>
-<p><a href="index.html">index</a></p>
+<p><a href="index.html#general">index</a></p>
 <h3 id="bang">[bang]</h3>
 <p>Outputs a “bang” message for whatever message it receives.</p>
 <p>inlet 0</p>
@@ -23,6 +23,9 @@
 <ul>
 <li>bang</li>
 </ul>
+<blockquote>
+<p>updated for Pd version 0.27</p>
+</blockquote>
 </div>
 <script src="pdmanual.js"></script>
 </body>
