--- a/pandoc-and-reference/float.html
+++ b/pandoc-and-reference/float.html
@@ -12,7 +12,7 @@
 
 </div>
 <div id=corpus>
-<p><a href="index.html">index</a></p>
+<p><a href="index.html#general">index</a></p>
 <h3 id="float">[float]</h3>
 <p>Store a (floating point) number</p>
 <p>The float object stores a number, initialized by its creation argument, which may be reset using its inlet and output by sending it the “bang” message. Sending a number sets a new value and outputs it.</p>
@@ -33,6 +33,9 @@
 </ul>
 <blockquote>
 <p>see also <a href="int.html">[int]</a> <a href="value.html">[value]</a> <a href="send.html">[send]</a></p>
+</blockquote>
+<blockquote>
+<p>updated for Pd version 0.48</p>
 </blockquote>
 </div>
 <script src="pdmanual.js"></script>
