--- a/pandoc-and-reference/index.html
+++ b/pandoc-and-reference/index.html
@@ -19,7 +19,7 @@
 <a href="float.html">[float]</a> - store and recall a number<br />
 <a href="symbol.html">[symbol]</a> - store and recall a symbol<br />
 <a href="int.html">[int]</a> - store and recall an integer<br />
-<a href="#">[send]</a> - send a message to a named object<br />
+<a href="send.html">[send]</a> - send a message to a named object<br />
 <a href="#">[receive]</a> - catch “sent” messages<br />
 <a href="#">[select]</a> - test for matching numbers or symbols<br />
 <a href="#">[route]</a> - route messages according to first element<br />
