--- a/pandoc-and-reference/symbol.html
+++ b/pandoc-and-reference/symbol.html
@@ -12,7 +12,7 @@
 
 </div>
 <div id=corpus>
-<p><a href="index.html">index</a></p>
+<p><a href="index.html#general">index</a></p>
 <h3 id="symbol">[symbol]</h3>
 <p>Store a symbol (i.e., string)</p>
 <p>The symbol object stores a symbol, Pd’s data type for handling fixed strings (often filenames or the names of other objects in pd).</p>
@@ -31,6 +31,9 @@
 <ul>
 <li>symbol</li>
 </ul>
+<blockquote>
+<p>updated for Pd version 0.45</p>
+</blockquote>
 </div>
 <script src="pdmanual.js"></script>
 </body>
