--- a/pandoc-and-reference/int.html
+++ b/pandoc-and-reference/int.html
@@ -12,7 +12,7 @@
 
 </div>
 <div id=corpus>
-<p><a href="index.html">index</a></p>
+<p><a href="index.html#general">index</a></p>
 <h3 id="int">[int]</h3>
 <p>Store an integer</p>
 <p>The int object stores a number, initialized by its creation argument, which may be reset using its inlet and output by sending it the “bang” message. Sending a number sets a new value and outputs it. The output is truncated to an integer a la Max.</p>
@@ -32,6 +32,9 @@
 </ul>
 <blockquote>
 <p>see also <a href="float.html">[float]</a> <a href="value.html">[value]</a> <a href="send.html">[send]</a></p>
+</blockquote>
+<blockquote>
+<p>updated for Pd version 0.48</p>
 </blockquote>
 </div>
 <script src="pdmanual.js"></script>
