--- a/pd-manual-preview-1/x4.htm
+++ b/pd-manual-preview-1/x4.htm
@@ -92,59 +92,75 @@ means the binaries have different extensions according to each platform. For
 instance:	
 	
 <table>
-<thead>
-<tr>
-<th style="text-align:center;"> </th>
-<th style="text-align:center;"> Linux </th>
-<th style="text-align:center;"> macOS </th>
-<th style="text-align:center;"> Windows </th>
+<thead valign="bottom">
+<tr><th>Operating System</th>
+<th>CPU-architecture</th>
+<th>filename</th>
 </tr>
 </thead>
-<tbody>
-<tr>
-<td style="text-align:center;"><strong>generic</strong></td>
-<td style="text-align:center;">.pd_linux<br>.so</td>
-<td style="text-align:center;">.pd_darwin<br>.dylib</td>
-<td style="text-align:center;">.dll</td>
+<tbody valign="top">
+<tr><td>Linux</td>
+<td><em>unspecified</em>
+(any architecture)</td>
+<td><code>my_lib.pd_linux</code></td>
 </tr>
-<tr>
-<td style="text-align:center;"><strong>i386</strong></td>
-<td style="text-align:center;">.l_i386</td>
-<td style="text-align:center;">.d_i386  </td>
-<td style="text-align:center;">.m_i386  </td>
+<tr><td>Linux</td>
+<td>i386 (Intel/AMD 32bit)</td>
+<td><code>my_lib.l_i386</code></td>
 </tr>
-<tr>
-<td style="text-align:center;"> <strong>amd64</strong> </td>
-<td style="text-align:center;">.l_amd64</td>
-<td style="text-align:center;">.d_amd64  </td>
-<td style="text-align:center;">.m_amd64  </td>
+<tr><td>Linux</td>
+<td>amd64 (Intel/AMD 64bit)</td>
+<td><code>my_lib.l_amd64</code></td>
 </tr>
-<tr>
-<td style="text-align:center;"><strong>both</strong>  </td>
-<td style="text-align:center;"></td>
-<td style="text-align:center;">.d_fat  </td>
-<td style="text-align:center;">  </td>
+<tr><td>Linux</td>
+<td>arm (e.g. RaspberryPi)</td>
+<td><code>my_lib.l_arm</code></td>
 </tr>
-<tr>
-<td style="text-align:center;"><strong>arm</strong>  </td>
-<td style="text-align:center;">.l_arm</td>
-<td style="text-align:center;">  </td>
-<td style="text-align:center;">  </td>
+<tr><td>Linux</td>
+<td>arm64</td>
+<td><code>my_lib.l_arm64</code></td>
 </tr>
-<tr>
-<td style="text-align:center;"><strong>arm64</strong>  </td>
-<td style="text-align:center;">.l_arm64</td>
-<td style="text-align:center;">  </td>
-<td style="text-align:center;">  </td>
+<tr><td>macOS</td>
+<td><em>unspecified</em>
+(any architecture)</td>
+<td><code>my_lib.pd_darwin</code></td>
+</tr>
+<tr><td>macOS</td>
+<td>fat (multiple archs)</td>
+<td><code>my_lib.d_fat</code></td>
+</tr>
+<tr><td>macOS</td>
+<td>PowerPC</td>
+<td><code>my_lib.d_ppc</code></td>
+</tr>
+<tr><td>macOS</td>
+<td>i386 (Intel 32bit)</td>
+<td><code>my_lib.d_i386</code></td>
+</tr>
+<tr><td>macOS</td>
+<td>amd64 (Intel 64bit)</td>
+<td><code>my_lib.d_amd64</code></td>
+</tr>
+<tr><td>macOS</td>
+<td>arm64 (Apple Silicon)</td>
+<td><code>my_lib.d_arm64</code></td>
+</tr>
+<tr><td>Windows</td>
+<td><em>unspecified</em>
+(any architecture)</td>
+<td><code>my_lib.dll</code></td>
+</tr>
+<tr><td>Windows</td>
+<td>i386 (Intel/AMD 32bit)</td>
+<td><code>my_lib.m_i386</code></td>
+</tr>
+<tr><td>Windows</td>
+<td>amd64 (Intel/AMD 64bit)</td>
+<td><code>my_lib.m_amd64</code></td>
 </tr>
 </tbody>
 </table>
 
-	
-	
-	
-	
-	
 	
 <H3> <A id=s1.2.2> 4.1.2.2. Abstractions:</A> </H3>
 
